--- a/desafio.html
+++ b/desafio.html
@@ -22,7 +22,7 @@
         qtdsorteios ++;
         var nome = ip_nome.value
         var numerosorte = ip_numero.value
-        var numrandom = Math.random()*1+10;
+        var numrandom = Math.random()*(10-1)+1;
         if (numerosorte >= 1 && numerosorte <= 10) {
             div1.innerHTML = `${numrandom}`
             
