--- a/desafio.html
+++ b/desafio.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     Solicite seu nome: <input id="ip_nome" type="text" placeholder="Seu nome"><br>
-    Seu numero da sorte entre 1 e 10: <input id="ip_numero" type="text" placeholder="Numero da sorte"><br>
+    Seu 1° numero da sorte entre 1 e 10: <input id="ip_numero1" type="text" placeholder="Numero da sorte"><br>
+    Seu 2° numero da sorte entre 1 e 10: <input id="ip_numero2" type="text" placeholder="Numero da sorte"><br>
+    Seu 3° numero da sorte entre 1 e 10: <input id="ip_numero3" type="text" placeholder="Numero da sorte"><br>
     <button onclick="sortear()">Sortear</button><br><br>
 
     <div id="div1"></div>
@@ -20,13 +22,22 @@
 
     function sortear(){
         var nome = ip_nome.value
-        var numerosorte = ip_numero.value
+        var numerosorte1 = ip_numero1.value
+        var numerosorte2 = ip_numero2.value
+        var numerosorte3 = ip_numero3.value
         var numrandom = Math.random()*(10-1)+1;
-        if (numerosorte >= 1 && numerosorte <= 10) {
+        if (numerosorte1 || numerosorte2 || numerosorte3 >= 1 && numerosorte1 && numerosorte2 &&numerosorte3 <= 10) {
             qtdsorteios ++;
            //div1.innerHTML += `${numrandom.toFixed()}`
-            if (numrandom.toFixed() == numerosorte) {
-               div1.innerHTML = `Parabéns, ${nome} você foi sorteado(a) após ${qtdsorteios} sorteios!`;
+            if (numrandom.toFixed() == numerosorte1) {
+               div1.innerHTML += `Parabéns, ${nome} o seu número da sorte ${numerosorte1} foi sorteado após ${qtdsorteios} sorteios!<br>`;
+            }
+            if (numrandom.toFixed() == numerosorte2) {
+               div1.innerHTML += `Parabéns, ${nome} o seu número da sorte ${numerosorte2} foi sorteado após ${qtdsorteios} sorteios!<br>`;
+
+            }
+            if (numrandom.toFixed() == numerosorte3) {
+               div1.innerHTML += `Parabéns, ${nome} o seu número da sorte ${numerosorte3} foi sorteado após ${qtdsorteios} sorteios!<br>`;
 
             }
         }
